# Agent-RAG

./: .cursorrules  .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
data/: scholar_demo.db
scripts/: README.md
src/agents/: master.py  worker-generation.py  worker-retrieval.py  worker-sql.py  worker-websearch.py
src/services/: VectorStore.py
src/services/VectorStore/: PDFVectorStore.py
src/services/database/: connection.py  repository.py  schema.py
src/services/datasource/: PDFVectorStore.py  SQLVectorStore.py  __init__.py  abc_toolkit.py  chroma_toolkit.py  html_toolkit.py  pdf_toolkit.py
src/services/mcp/: MCPFetch.py
src/utils/helpers/: chunking.py  logger.py
tests/agents/: __init__.py  test_worker_sql.py
tests/datasource/: __init__.py  test_base_vector_store.py
tests/utils/: __init__.py  test_chunking.py
